# wine-corebluetooth-rust-plugin

./: .gitignore  CODE_REVIEW.md  Cargo.toml  README.md  build.sh  test_rust_plugin.sh
src/: callbacks.rs  device.rs  gatt.rs  lib.rs  state.rs  watcher.rs
